--- a/src/app/note-list/note-list.component.html
+++ b/src/app/note-list/note-list.component.html
@@ -1,24 +1,33 @@
 <ul class="list-group">
-  <li 
-    *ngFor="let todo of todos; let i = index" 
-    class="list-group-item d-flex justify-content-between align-items-center"
-    [ngClass]="{'list-group-item-success': todo.completed, 'list-group-item-danger': !todo.completed}">
-    
+  <li
+    *ngFor="let todo of todos; let i = index"
+    class="list-group-item bg-dark text-light d-flex justify-content-between align-items-center p-3 shadow-lg mb-2 rounded"
+    [ngClass]="{
+      'list-group-item-success': todo.completed,
+      'list-group-item-danger': !todo.completed
+    }"
+  >
     <div class="d-flex align-items-center">
-      <input 
-        type="checkbox" 
-        class="form-check-input me-2" 
-        [checked]="todo.completed" 
-        (change)="onToggleCompletion(i)">
-      <span [ngClass]="{'text-decoration-line-through': todo.completed}">
+      <input
+        type="checkbox"
+        class="form-check-input me-3 shadow-sm"
+        [checked]="todo.completed"
+        (change)="onToggleCompletion(i)"
+      />
+      <span
+        class="fw-bold"
+        [ngClass]="{ 'text-decoration-line-through': todo.completed }"
+      >
         {{ todo.text }}
       </span>
     </div>
-    
-    <button 
-      class="btn btn-danger btn-sm" 
-      (click)="onDelete(i)">
-      Delete
+
+    <button
+      class="btn btn-outline-danger btn-sm rounded-circle shadow-sm"
+      (click)="onDelete(i)"
+    >
+      <i class="fas fa-trash"></i>
+      delete
     </button>
   </li>
 </ul>
